[package]
name = "recode"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
reqwest = { version = "0.11.7", features = ["blocking"] }
memflow = "0.1.5"
memflow-win32 = "0.1.5"
dataview = "0.1.2"
libm = "0.2.1"  
serde = {version = "1.0.131", features = ["derive"] }
crossterm = "0.22.1"